--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[March, 2024] <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on studying <b>reproducibility of diffusion model in memorization and generalization regimes</b> is posted. 
+</p>
+</li>
 <li><p>[November, 2023] <a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding <b>hierarchical representation learning</b> via low-dimensinoal modeling is posted!  
 </p>
 </li>
@@ -79,6 +82,10 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprint Papers</h2>
 <ul>
+<li><p>Huijie Zhang, Jinfan Zhou, Yifu Lu, Minzhe Guo, <b>Peng Wang</b>, Liyue Shen, and Qing Qu. The Emergence of Reproducibility and Consistency in
+Diffusion Models. Submitted to <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+</p>
+</li>
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination, 2023. Submitted to <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
@@ -88,7 +95,7 @@ Postdoc Research Fellow <br />
 <li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results. Submitted to <b><i>SIAM Journal on Optimization</i></b>, 2023. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes, 2023. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes. Submitted to <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -139,7 +146,7 @@ Postdoc Research Fellow <br />
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-24 20:29:54 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-06 14:47:18 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
