--- a/index.html
+++ b/index.html
@@ -53,28 +53,27 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[March, 2024] <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on studying <b>reproducibility of diffusion model in memorization and generalization regimes</b> is posted. 
+<li><p>[May 2024 ] <b>Five papers</b> are accepted <b>ICML 2024</b>!
 </p>
 </li>
-<li><p>[November, 2023] <a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding <b>hierarchical representation learning</b> via low-dimensinoal modeling is posted!  
+<li><p>[March 2024] <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on studying <b>reproducibility of diffusion model in memorization and generalization regimes</b> is posted. 
 </p>
 </li>
-<li><p>[October, 2023] I was selected to receive the <a href="https://cpal.cc/rising_stars" target=&ldquo;blank&rdquo;><b>Rising Star Award</b></a> at <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL 2024</b></a>! 
+<li><p>[November 2023] <a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding <b>hierarchical representation learning</b> via low-dimensinoal modeling is posted!  
 </p>
 </li>
-<li><p>[October, 2023] <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the <b>generalized neural collapse</b> is posted! 
+<li><p>[October 2023] I was selected to receive the <a href="https://cpal.cc/rising_stars" target=&ldquo;blank&rdquo;><b>Rising Star Award</b></a> at <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL 2024</b></a>! 
 </p>
 </li>
-<li><p>[June, 2023] <a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the <b>low-dimensional updates</b> of gradient descent for deep networks is posted!
+<li><p>[October 2023] <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the <b>generalized neural collapse</b> is posted! 
 </p>
 </li>
-<li><p>[April, 2023] <a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on <b>chance constrained programming</b> is posted!  
+<li><p>[June 2023] <a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the <b>low-dimensional updates</b> of gradient descent for deep networks is posted!
 </p>
 </li>
-<li><p>[November, 2022] <a href="https://arxiv.org/pdf/2107.07107.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on L1-PCA has been accepted by SIOPT!
-</p>
-</li>
-<li><p>[Septembe, 2022] <a href="https://arxiv.org/pdf/2209.09211.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on neural collapse has been accepted by NeurIPS 2022!
+<li><p>[April 2023] <a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on <b>chance constrained programming</b> is posted!  
+
+
 
 
 </p>
@@ -82,10 +81,6 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprint Papers</h2>
 <ul>
-<li><p>Huijie Zhang, Jinfan Zhou, Yifu Lu, Minzhe Guo, <b>Peng Wang</b>, Liyue Shen, and Qing Qu. The Emergence of Reproducibility and Consistency in
-Diffusion Models. Submitted to <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
-</p>
-</li>
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination, 2023. Submitted to <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
@@ -93,9 +88,6 @@ Diffusion Models. Submitted to <b><i>ICML 2024</i></b>. [<a href="https://arxiv.
 </p>
 </li>
 <li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results. Submitted to <b><i>SIAM Journal on Optimization</i></b>, 2023. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
-</p>
-</li>
-<li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes. Submitted to <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -113,6 +105,22 @@ Diffusion Models. Submitted to <b><i>ICML 2024</i></b>. [<a href="https://arxiv.
 </ul>
 <h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
+<li><p><b>Peng Wang</b>, Huikang Liu, Druv Pai, Yaodong Yu, Zhihui Zhu, Qing Qu, Yi Ma. A Global Geometric Analysis of Maximal Coding Rate Reduction. To appear in <b><i>ICML 2024</i></b>. 
+</p>
+</li>
+<li><p>Can Yaras, <b>Peng Wang</b>, Laura Balzano, Qing Qu. Compressible Dynamics in Deep Overparameterized Low-Rank Learning &amp; Adaptation. To appear in <b><i>ICML 2024</i></b>. 
+</p>
+</li>
+<li><p>Huikang Liu*, <b>Peng Wang</b>*, Longxiu Huang, Qing Qu, Laura Balzano. Matrix Completion with ReLU Sampling. To appear in <b><i>ICML 2024</i></b>. 
+</p>
+</li>
+<li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+</p>
+</li>
+<li><p>Huijie Zhang, Jinfan Zhou, Yifu Lu, Minzhe Guo, <b>Peng Wang</b>, Liyue Shen, and Qing Qu. The Emergence of Reproducibility and Consistency in
+Diffusion Models. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+</p>
+</li>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. Invariant Low-Dimensional Subspaces in Gradient Descent for Learning Deep Matrix Factorizations. <b><i>NeurIPS M3L 2023</i></b>.
 </p>
 </li>
@@ -146,7 +154,7 @@ Diffusion Models. Submitted to <b><i>ICML 2024</i></b>. [<a href="https://arxiv.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-06 14:47:18 Eastern Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-05-02 09:41:45 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
