--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[May 2024 ] <b>Five papers</b> are accepted <b>ICML 2024</b>!
+<li><p>[May 2024 ] <b>Five papers</b> are accepted in <b>ICML 2024</b>! 
 </p>
 </li>
 <li><p>[March 2024] <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on studying <b>reproducibility of diffusion model in memorization and generalization regimes</b> is posted. 
@@ -154,7 +154,7 @@ Diffusion Models. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-02 09:41:45 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-05-02 10:09:14 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
