--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[May 2024 ] <b>Five papers</b> are accepted in <b>ICML 2024</b>! 
+<li><p>[May 2024 ] <b>Five papers</b> [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper1</b></a>, <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper2</b></a>, <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper3</b></a>]  are accepted in <b>ICML 2024</b>! 
 </p>
 </li>
 <li><p>[March 2024] <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on studying <b>reproducibility of diffusion model in memorization and generalization regimes</b> is posted. 
@@ -87,7 +87,7 @@ Postdoc Research Fellow <br />
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. In submission. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results. Submitted to <b><i>SIAM Journal on Optimization</i></b>, 2023. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results. Under revision in <b><i>INFORMS Journal on Computing</i></b>, 2024. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -105,10 +105,10 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Huikang Liu, Druv Pai, Yaodong Yu, Zhihui Zhu, Qing Qu, Yi Ma. A Global Geometric Analysis of Maximal Coding Rate Reduction. To appear in <b><i>ICML 2024</i></b>. 
+<li><p><b>Peng Wang</b>, Huikang Liu, Druv Pai, Yaodong Yu, Zhihui Zhu, Qing Qu, Yi Ma. A Global Geometric Analysis of Maximal Coding Rate Reduction. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper</b></a>]  
 </p>
 </li>
-<li><p>Can Yaras, <b>Peng Wang</b>, Laura Balzano, Qing Qu. Compressible Dynamics in Deep Overparameterized Low-Rank Learning &amp; Adaptation. To appear in <b><i>ICML 2024</i></b>. 
+<li><p>Can Yaras, <b>Peng Wang</b>, Laura Balzano, Qing Qu. Compressible Dynamics in Deep Overparameterized Low-Rank Learning &amp; Adaptation. To appear in <b><i>ICML 2024</i></b> (<font color=red size=+0.5><b>Oral, acceptance rate: 1.58%</b></font>).
 </p>
 </li>
 <li><p>Huikang Liu*, <b>Peng Wang</b>*, Longxiu Huang, Qing Qu, Laura Balzano. Matrix Completion with ReLU Sampling. To appear in <b><i>ICML 2024</i></b>. 
@@ -121,7 +121,7 @@ Postdoc Research Fellow <br />
 Diffusion Models. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
-<li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. Invariant Low-Dimensional Subspaces in Gradient Descent for Learning Deep Matrix Factorizations. <b><i>NeurIPS M3L 2023</i></b>.
+<li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. Invariant Low-Dimensional Subspaces in Gradient Descent for Learning Deep Matrix Factorizations. <b><i>NeurIPS M3L 2023</i></b>. [<a href="https://openreview.net/pdf?id=4pPnQqUMLS" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Jinxin Wang, Yuen-Man Pun, Xiaolu Wang, <b>Peng Wang</b>, Anthony Man-Cho So. Projected Tensor Power Method for Hypergraph Community Recovery. <b><i>ICML 2023</i></b>.  [<a href="https://openreview.net/pdf?id=CcDKqUR546" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -154,7 +154,7 @@ Diffusion Models. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-02 10:09:14 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-06-04 23:12:10 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
