--- a/activity.html
+++ b/activity.html
@@ -22,16 +22,54 @@ MathJax.Hub.Config({
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Peng Wang</div>
-<div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="experience.html">Experience</a></div>
-<div class="menu-item"><a href="activity.html" class="current">Activities</a></div>
+<div class="menu-item"><a href="index.html"><b>Home</b></a></div>
+<div class="menu-item"><a href="activity.html" class="current"><b>Activities</b></a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Activities </h1>
 </div>
+<h2>Academic Service</h2>
+<ul>
+<li><p>Area Chair, <b>The Conference on Parsimony and Learning (CPAL)</b>, Hong Kong, China, January 2024
+</p>
+</li>
+<li><p>Session Chair, <b>ICSA Applied Statistics Symposium</b>, Ann Arbor, USA, June 2023 
+</p>
+</li>
+<li><p>Organizer of a mini-symposium at <b>SIAM Conference on Optimization (OP23)</b>, Seattle, USA, May 2023 
+</p>
+</li>
+<li><p>Referee for SIAM Journal on Optimization,  IEEE Transactions on Pattern Analysis and Machine Intelligence, IEEE Transactions on Information Theory
+</p>
+</li>
+<li><p>Reviewer for ICML, ICLR, NeurIPS 
+</p>
+</li>
+</ul>
 <h2>Talks</h2>
 <ul>
+<li><p>Invited talk in <b>Information: Theory and Applications (ITA) workshop</b>, San Diego, USA, February 2024
+</p>
+</li>
+<li><p>Oral presentation in <b>The Conference on Parsimony and Learning (CPAL)</b>, Hong Kong, China, January 2024
+</p>
+</li>
+<li><p>Invited talk in Department of Mathematics, <b>National University of Singapore</b>, Singapore, October 2023
+</p>
+</li>
+<li><p>Oral presentation in <b>SIAM Conference on Optimization</b> (OP23), Seattle, June 2023 
+</p>
+</li>
+<li><p>Invited talk in Faculty of Data Sciences, <b>New York University Shanghai</b>, Shanghai, China, April 2023
+</p>
+</li>
+<li><p>Invited talk in School of Data Sciences,  <b>Fudan University</b>, Shanghai, China, April 2023
+</p>
+</li>
+<li><p>Invited talk in the Tianyuan Mathematical Center in Southwest China and School of Mathematics, <b>Sichuan University</b>, Online, December 2022
+</p>
+</li>
 <li><p>Invited talk in the CMSE Brown Bag Seminar Series, <b>Michigan State University</b>, Lansing, USA, October 2022 
 </p>
 </li>
