--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@ MathJax.Hub.Config({
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Peng Wang</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="experience.html">Experience</a></div>
-<div class="menu-item"><a href="activity.html">Activities</a></div>
+<div class="menu-item"><a href="index.html" class="current"><b>Home</b></a></div>
+<div class="menu-item"><a href="activity.html"><b>Activities</b></a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -32,13 +31,10 @@ MathJax.Hub.Config({
 </div>
 <table class="imgtable"><tr><td>
 <img src="tianlai.jpg" alt="Peng Wang Photo" width="150px" />&nbsp;</td>
-<td align="left"><p><b>Peng Wang</b> <br />
+<td align="left"><p>Peng Wang <br />
 Postdoc Research Fellow <br />
-</p>
-<p><a href="https://eecs.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Department of Electrical Engineering and Computer Science</b></a> <br /> 
-<a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan</b>, <b>Ann Arbor</b></a> <br />
-<br />
-<b>Office</b>: Room 3218, EECS Building, 1301 Beal Avenue, Ann Arbor, MI 48109-2122 <br />
+<a href="https://eecs.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Department of Electrical Engineering and Computer Science</b></a> <br /> 
+<a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan, Ann Arbor</b></a> <br />
 <b>Email</b>: pengwa@umich.edu <br />
 <a href="https://scholar.google.com/citations?user=baF3HKUAAAAJ&amp;hl=zh-TW" target=&ldquo;blank&rdquo;><b>Google Scholar</b></a>
 </p>
@@ -47,13 +43,14 @@ Postdoc Research Fellow <br />
 <p>I am currently a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;><b>Laura Balzano</b></a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Qing Qu</b></a> at <a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan</b></a>. Before that, I got my Ph.D. degree in Systems Engineering and Engineering Management advised by Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;><b>Anthony Man-Cho So</b></a> at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;><b>The Chinese University of Hong Kong</b></a>.
 </p>
 <h2>Research Interests </h2>
-<p>Broadly speaking, my research interest lies in the intersects of optimization, machine learning, and data science. Specifically, I am interested in exploring the low-complexity models of learning problems in applications and developing advanced theory and efficient algorithms to understand and solve these problems. I aim to not only enhance our understanding of data-driven processes but also enable us to make informed decisions, optimize the workflows, and develop more effective and efficient solutions.
+<p>Broadly speaking, my research interest lies in the intersects of optimization, machine learning, and data science. Specifically, I am interested in exploring the low-complexity models of learning problems in applications and developing advanced theory and efficient algorithms to understand and solve these problems. 
+
 </p>
 <p><b> Feel free to email me if you are interested in my research. Remote collaboration is also welcome!</b> 
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[May 2024 ] <b>Five papers</b> [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper1</b></a>, <a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper2</b></a>, <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper3</b></a>, <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper4</b></a>, <a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper5</b></a>]  are accepted in <b>ICML 2024</b>! 
+<li><p>[May 2024 ] <b>Five papers</b> [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper1</b></a>, <a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper2</b></a>, <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper3</b></a>, <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper4</b></a>, <a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper5</b></a>]  are accepted by <b>ICML 2024</b>! 
 </p>
 </li>
 <li><p>[March 2024] <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on studying <b>reproducibility of diffusion model in memorization and generalization regimes</b> is posted. 
@@ -63,15 +60,9 @@ Postdoc Research Fellow <br />
 </p>
 </li>
 <li><p>[October 2023] I was selected to receive the <a href="https://cpal.cc/rising_stars" target=&ldquo;blank&rdquo;><b>Rising Star Award</b></a> at <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL 2024</b></a>! 
-</p>
-</li>
-<li><p>[October 2023] <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the <b>generalized neural collapse</b> is posted! 
-</p>
-</li>
-<li><p>[June 2023] <a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on the <b>low-dimensional updates</b> of gradient descent for deep networks is posted!
-</p>
-</li>
-<li><p>[April 2023] <a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on <b>chance constrained programming</b> is posted!  
+
+
+
 
 
 
@@ -79,7 +70,7 @@ Postdoc Research Fellow <br />
 </p>
 </li>
 </ul>
-<h2>Preprint Papers</h2>
+<h2>Preprints</h2>
 <ul>
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination, 2023. Submitted to <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
@@ -108,7 +99,7 @@ Postdoc Research Fellow <br />
 <li><p><b>Peng Wang</b>, Huikang Liu, Druv Pai, Yaodong Yu, Zhihui Zhu, Qing Qu, Yi Ma. A Global Geometric Analysis of Maximal Coding Rate Reduction. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper</b></a>]  
 </p>
 </li>
-<li><p>Can Yaras, <b>Peng Wang</b>, Laura Balzano, Qing Qu. Compressible Dynamics in Deep Overparameterized Low-Rank Learning &amp; Adaptation. To appear in <b><i>ICML 2024</i></b> (<font color=red size=+0.5><b>Oral, acceptance rate: 1.58%</b></font>). [<a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>Can Yaras, <b>Peng Wang</b>, Laura Balzano, Qing Qu. Compressible Dynamics in Deep Overparameterized Low-Rank Learning &amp; Adaptation. To appear in <b><i>ICML 2024</i></b> (<font color=red size=+0.5><b>Oral, acceptance rate: 1.52%</b></font>). [<a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Huikang Liu*, <b>Peng Wang</b>*, Longxiu Huang, Qing Qu, Laura Balzano. Matrix Completion with ReLU Sampling. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -154,7 +145,7 @@ Diffusion Models. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-10 22:14:12 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-07-27 21:46:55 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
