--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprints</h2>
 <ul>
-<li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination, 2023. Submitted to <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Under revision in <b><i>INFORMS Journal on Computing</i></b>, 2024. [<a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. In submission. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination, 2023. Under review in <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming: Convergence and Numerical Results. Under revision in <b><i>INFORMS Journal on Computing</i></b>, 2024. [<a href="https://arxiv.org/pdf/2301.00423.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. To be submitted. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Taoli Zheng, <b>Peng Wang</b>, Anthony Man-Cho So. A Linearly Convergent Algorithm for Rotationally Invariant L1-Norm Principal Component Analysis, 2022. [<a href="https://arxiv.org/pdf/2210.05066.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -96,20 +96,20 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
-<li><p><b>Peng Wang</b>, Huikang Liu, Druv Pai, Yaodong Yu, Zhihui Zhu, Qing Qu, Yi Ma. A Global Geometric Analysis of Maximal Coding Rate Reduction. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper</b></a>]  
+<li><p><b>Peng Wang</b>, Huikang Liu, Druv Pai, Yaodong Yu, Zhihui Zhu, Qing Qu, Yi Ma. A Global Geometric Analysis of Maximal Coding Rate Reduction. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper</b></a>]  
 </p>
 </li>
-<li><p>Can Yaras, <b>Peng Wang</b>, Laura Balzano, Qing Qu. Compressible Dynamics in Deep Overparameterized Low-Rank Learning &amp; Adaptation. To appear in <b><i>ICML 2024</i></b> (<font color=red size=+0.5><b>Oral, acceptance rate: 1.52%</b></font>). [<a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>Can Yaras, <b>Peng Wang</b>, Laura Balzano, Qing Qu. Compressible Dynamics in Deep Overparameterized Low-Rank Learning &amp; Adaptation. <b><i>ICML 2024</i></b> (<font color=red size=+0.5><b>Oral, acceptance rate: 1.52%</b></font>). [<a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p>Huikang Liu*, <b>Peng Wang</b>*, Longxiu Huang, Qing Qu, Laura Balzano. Matrix Completion with ReLU Sampling. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>Huikang Liu*, <b>Peng Wang</b>*, Longxiu Huang, Qing Qu, Laura Balzano. Matrix Completion with ReLU Sampling. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p>Jiachen Jiang, Jinxin Zhou, <b>Peng Wang</b>, Qing Qu, Dustin Mixon, Chong You, Zhihui Zhu. Generalized Neural Collapse for a Large Number of Classes. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Huijie Zhang, Jinfan Zhou, Yifu Lu, Minzhe Guo, <b>Peng Wang</b>, Liyue Shen, and Qing Qu. The Emergence of Reproducibility and Consistency in
-Diffusion Models. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. Invariant Low-Dimensional Subspaces in Gradient Descent for Learning Deep Matrix Factorizations. <b><i>NeurIPS M3L 2023</i></b>. [<a href="https://openreview.net/pdf?id=4pPnQqUMLS" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -145,7 +145,7 @@ Diffusion Models. To appear in <b><i>ICML 2024</i></b>. [<a href="https://arxiv.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-07-27 21:46:55 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-08-01 21:22:47 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
