--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[May 2024 ] <b>Five papers</b> [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper1</b></a>, <a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper2</b></a>, <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper3</b></a>, <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper4</b></a>, <a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper5</b></a>]  are accepted by <b>ICML 2024</b>! 
+<li><p>[September 2024] <b>Two papers</b> [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper 1</b></a>, <a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>paper 2</b></a>] on dffisuion models are released! 
+</p>
+</li>
+<li><p>[May 2024] <b>Five papers</b> [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper1</b></a>, <a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper2</b></a>, <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper3</b></a>, <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper4</b></a>, <a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper5</b></a>]  are accepted by <b>ICML 2024</b>! 
 </p>
 </li>
 <li><p>[March 2024] <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on studying <b>reproducibility of diffusion model in memorization and generalization regimes</b> is posted. 
@@ -72,6 +75,12 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Preprints</h2>
 <ul>
+<li><p><b>Peng Wang</b>*, Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+</p>
+</li>
+<li><p>Siyi Chen*, Huijie Zhang*, Minzhe Guo, Yifu Lu, <b>Peng Wang</b>, Qing Qu. Exploring Low-Dimensional Subspaces in Diffusion Models for Controllable Image Editing, 2024. [<a href="https://arxiv.org/abs/2409.02374" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+</p>
+</li>
 <li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Under revision in <b><i>INFORMS Journal on Computing</i></b>, 2024. [<a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
@@ -145,7 +154,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-01 21:22:47 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-09-04 21:37:25 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
