--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[September 2024] <b>Two papers</b> [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper 1</b></a>, <a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>paper 2</b></a>] on dffisuion models are released! 
+<li><p>[September 2024] I will give a talk on diffusion models in <a href="https://ece.engin.umich.edu/event/tbd-24" target=&ldquo;blank&rdquo;><b>ECE Communications and Signal Processing Seminars</b></a> at the University of Michigan! 
+</p>
+</li>
+<li><p>[September 2024] <a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>One paper</b></a> on dffisuion models is accepted by <b>NeurIPS 2024</b>! 
+</p>
+</li>
+<li><p>[September 2024] <b>Two papers</b> [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper 1</b></a>, <a href="[https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>paper 2</b></a>] on diffusion models are released! 
 </p>
 </li>
 <li><p>[May 2024] <b>Five papers</b> [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper1</b></a>, <a href="http://arxiv.org/abs/2406.04112" target=&ldquo;blank&rdquo;><b>paper2</b></a>, <a href="https://arxiv.org/pdf/2310.05264.pdf" target=&ldquo;blank&rdquo;><b>paper3</b></a>, <a href="https://arxiv.org/pdf/2310.05351.pdf" target=&ldquo;blank&rdquo;><b>paper4</b></a>, <a href="https://arxiv.org/pdf/2406.05822" target=&ldquo;blank&rdquo;><b>paper5</b></a>]  are accepted by <b>ICML 2024</b>! 
@@ -78,9 +84,6 @@ Postdoc Research Fellow <br />
 <li><p><b>Peng Wang</b>*, Huijie Zhang*, Zekai Zhang, Siyi Chen, Yi Ma, Qing Qu. Diffusion Models Learn Low-Dimensional Distributions via Subspace Clustering, 2024. [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
-<li><p>Siyi Chen*, Huijie Zhang*, Minzhe Guo, Yifu Lu, <b>Peng Wang</b>, Qing Qu. Exploring Low-Dimensional Subspaces in Diffusion Models for Controllable Image Editing, 2024. [<a href="https://arxiv.org/abs/2409.02374" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
-</p>
-</li>
 <li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Under revision in <b><i>INFORMS Journal on Computing</i></b>, 2024. [<a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
@@ -105,6 +108,9 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
+<li><p>Siyi Chen*, Huijie Zhang*, Minzhe Guo, Yifu Lu, <b>Peng Wang</b>, Qing Qu. Exploring Low-Dimensional Subspaces in Diffusion Models for Controllable Image Editing. To appear in <b><i>NeurIPS 2024</i></b>. [<a href="https://arxiv.org/abs/2409.02374" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+</p>
+</li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Druv Pai, Yaodong Yu, Zhihui Zhu, Qing Qu, Yi Ma. A Global Geometric Analysis of Maximal Coding Rate Reduction. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper</b></a>]  
 </p>
 </li>
@@ -154,7 +160,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-04 21:37:25 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-09-25 13:38:20 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
