--- a/activity.html
+++ b/activity.html
@@ -49,10 +49,22 @@ MathJax.Hub.Config({
 </ul>
 <h2>Talks</h2>
 <ul>
-<li><p>Invited talk in <b>Information: Theory and Applications (ITA) workshop</b>, San Diego, USA, February 2024
+<li><p>Invitied lecture presentation in <a href="https://cmsworkshops.com/Asilomar2024/view_paper.php?PaperNum=1469" target=&ldquo;blank&rdquo;><b>Asilomar Conference on Signals, Systems, and Computers</b></a>, Pacific Grove, CA, USA, October 2024 
 </p>
 </li>
-<li><p>Oral presentation in <b>The Conference on Parsimony and Learning (CPAL)</b>, Hong Kong, China, January 2024
+<li><p>Invited talk in <a href="https://ece.engin.umich.edu/event/tbd-24" target=&ldquo;blank&rdquo;><b>ECE Communications and Signal Processing Seminars</b></a>, University of Michigan, Ann Arbor, USA, September 2024  
+</p>
+</li>
+<li><p>Invited talk in <a href="https://sites.google.com/umich.edu/2024mcaim/home" target=&ldquo;blank&rdquo;><b>SIAM Student Mini-Symposium in Applied Mathematics</b></a>, Ann Abor, USA, September 2024 
+</p>
+</li>
+<li><p>Tutorial in <a href="https://2024.ieeeicassp.org/tutorials/" target=&ldquo;blank&rdquo;><b>International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</b></a>, Seoul, Korea, April 2024  
+</p>
+</li>
+<li><p>Invited talk in <a href="https://ita.ucsd.edu/" target=&ldquo;blank&rdquo;><b>Information: Theory and Applications (ITA) Workshop</b></a>, San Diego, USA, February 2024
+</p>
+</li>
+<li><p>Oral presentation in <a href="https://2024.cpal.cc/" target=&ldquo;blank&rdquo;><b>The Conference on Parsimony and Learning (CPAL)</b></a>, Hong Kong, China, January 2024
 </p>
 </li>
 <li><p>Invited talk in Department of Mathematics, <b>National University of Singapore</b>, Singapore, October 2023
