--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
+<li><p>[October 2024] I will give a lecture presentation on diffusion models in <a href="https://cmsworkshops.com/Asilomar2024/view_paper.php?PaperNum=1469" target=&ldquo;blank&rdquo;><b>Asilomar 2024</b></a> at Pacific Grove, CA!
+</p>
+</li>
+<li><p>[October 2024] <b>Two paper</b> on diffusion models get accepted by <b>NeurIPS Workshop on Mathematics of Modern Machine Learning</b>! 
+</p>
+</li>
 <li><p>[September 2024] I will give a talk on diffusion models in <a href="https://ece.engin.umich.edu/event/tbd-24" target=&ldquo;blank&rdquo;><b>ECE Communications and Signal Processing Seminars</b></a> at the University of Michigan! 
 </p>
 </li>
-<li><p>[September 2024] <a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>One paper</b></a> on dffisuion models is accepted by <b>NeurIPS 2024</b>! 
+<li><p>[September 2024] <a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>One paper</b></a> on dffisuion models is accepted by <b>NeurIPS 2024</b>! 
 </p>
 </li>
 <li><p>[September 2024] <b>Two papers</b> [<a href="https://arxiv.org/pdf/2409.02426" target=&ldquo;blank&rdquo;><b>paper 1</b></a>, <a href="[https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>paper 2</b></a>] on diffusion models are released! 
@@ -108,7 +114,7 @@ Postdoc Research Fellow <br />
 </ul>
 <h2>Conference Papers (&lsquo;&lsquo;*&rsquo;&rsquo; denotes equal contribution.)</h2>
 <ul>
-<li><p>Siyi Chen*, Huijie Zhang*, Minzhe Guo, Yifu Lu, <b>Peng Wang</b>, Qing Qu. Exploring Low-Dimensional Subspaces in Diffusion Models for Controllable Image Editing. To appear in <b><i>NeurIPS 2024</i></b>. [<a href="https://arxiv.org/abs/2409.02374" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
+<li><p>Siyi Chen*, Huijie Zhang*, Minzhe Guo, Yifu Lu, <b>Peng Wang</b>, Qing Qu. Exploring Low-Dimensional Subspaces in Diffusion Models for Controllable Image Editing. To appear in <b><i>NeurIPS 2024</i></b>. [<a href="https://arxiv.org/pdf/2409.02374" target=&ldquo;blank&rdquo;><b>paper</b></a>] 
 </p>
 </li>
 <li><p><b>Peng Wang</b>, Huikang Liu, Druv Pai, Yaodong Yu, Zhihui Zhu, Qing Qu, Yi Ma. A Global Geometric Analysis of Maximal Coding Rate Reduction. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2406.01909" target=&ldquo;blank&rdquo;><b>paper</b></a>]  
@@ -160,7 +166,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-25 13:38:20 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-10-11 10:34:54 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
