--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ Postdoc Research Fellow <br />
 <p>I am currently a postdoc research fellow advised by Professors <a href="https://web.eecs.umich.edu/~girasole/" target=&ldquo;blank&rdquo;><b>Laura Balzano</b></a> and <a href="https://qingqu.engin.umich.edu/" target=&ldquo;blank&rdquo;><b>Qing Qu</b></a> at <a href="https://umich.edu/" target=&ldquo;blank&rdquo;><b>University of Michigan</b></a>. Before that, I got my Ph.D. degree in Systems Engineering and Engineering Management advised by Professor <a href="https://www1.se.cuhk.edu.hk/~manchoso/" target=&ldquo;blank&rdquo;><b>Anthony Man-Cho So</b></a> at <a href="https://www.cuhk.edu.hk/" target=&ldquo;blank&rdquo;><b>The Chinese University of Hong Kong</b></a>.
 </p>
 <h2>Research Interests </h2>
-<p>Broadly speaking, my research interest lies in the intersects of optimization, machine learning, and data science. Specifically, I am interested in exploring the low-complexity models of learning problems in applications and developing advanced theory and efficient algorithms to understand and solve these problems. 
+<p>Broadly speaking, my research interest lies in the intersects of <b>optimization</b>, <b>machine learning</b>, and <b>data science</b>. Currently, I am devoted to understanding <b>mathematical foundations of deep learning models</b>, including supervised learning models, diffusion models, and large language models. I mainly study how low-complexity structures (e.g., low-rankness, sparsity, over-parameterization) in practical problems lead to favorable optimization properties and use them to mitigate the challenges caused by worst-case scenarios, enable efficient optimization, and improve our understanding of learning phenomena.. 
+
 
 </p>
 <p><b> Feel free to email me if you are interested in my research. Remote collaboration is also welcome!</b> 
@@ -170,7 +171,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-11 12:18:34 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-10-11 12:31:13 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
