--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@ Postdoc Research Fellow <br />
 </p>
 <h2>What's New</h2>
 <ul>
-<li><p>[October 2024] I will give a lecture presentation on diffusion models in <a href="https://cmsworkshops.com/Asilomar2024/view_paper.php?PaperNum=1469" target=&ldquo;blank&rdquo;><b>Asilomar 2024</b></a> at Pacific Grove, CA!
+<li><p>[January 2025] I will give a presenation in <a href="https://ims.nus.edu.sg/events/ims_forummath2025_am/" target=&ldquo;blank&rdquo;><b>IMS Young Mathematical Scientists Forum</b></a> at National University of Singapore! 
+</p>
+</li>
+<li><p>[October 2024] I will chair a session and give a lecture presentation on diffusion models in <a href="https://cmsworkshops.com/Asilomar2024/view_paper.php?PaperNum=1469" target=&ldquo;blank&rdquo;><b>Asilomar 2024</b></a> at Pacific Grove, CA!
 </p>
 </li>
 <li><p>[October 2024] <b>Two paper</b> on diffusion models get accepted by <b>NeurIPS Workshop on Mathematics of Modern Machine Learning</b>! 
@@ -73,9 +76,7 @@ Postdoc Research Fellow <br />
 </p>
 </li>
 <li><p>[November 2023] <a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>One paper</b></a> on understanding <b>hierarchical representation learning</b> via low-dimensinoal modeling is posted!  
-</p>
-</li>
-<li><p>[October 2023] I was selected to receive the <a href="https://cpal.cc/rising_stars" target=&ldquo;blank&rdquo;><b>Rising Star Award</b></a> at <a href="https://cpal.cc/" target=&ldquo;blank&rdquo;><b>CPAL 2024</b></a>! 
+
 
 
 
@@ -98,7 +99,7 @@ Postdoc Research Fellow <br />
 <li><p><b>Peng Wang</b>*, Xiao Li*, Can Yaras, Wei Hu, Zhihui Zhu, Laura Balzano, Wei Hu, Qing Qu. Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination. Under review in <b><i>Journal of Machine Learning Research</i></b>, 2024. [<a href="https://arxiv.org/pdf/2311.02960.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
-<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Under revision in <b><i>INFORMS Journal on Computing</i></b>, 2024. [<a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>paper</b></a>]
+<li><p><b>Peng Wang</b>, Rujun Jiang, Qingyuan Kong, Laura Balzano. A Proximal DC Algorithm for Sample Average Approximation of Chance Constrained Programming. Under <b>minor revision</b> in <b><i>INFORMS Journal on Computing</i></b>, 2024. [<a href="https://arxiv.org/pdf/2301.00423v4" target=&ldquo;blank&rdquo;><b>paper</b></a>]
 </p>
 </li>
 <li><p>Can Yaras*, <b>Peng Wang</b>*, Wei Hu, Zhihui Zhu, Laura Balzano, Qing Qu. The Law of Parsimony in Gradient Descent for Learning Deep Linear Networks, 2023. To be submitted. [<a href="https://arxiv.org/pdf/2306.01154.pdf" target=&ldquo;blank&rdquo;><b>paper</b></a>]
@@ -171,7 +172,7 @@ Diffusion Models. <b><i>ICML 2024</i></b>. [<a href="https://arxiv.org/pdf/2310.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-28 14:38:57 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-11-02 10:02:55 Eastern Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
